# search-index-library

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  _config.yml  build.sh
.changes/: 0.0.1.md
include/search-index-library/: sil_document_builder.h  sil_document_image.h  sil_search_builder.h  sil_search_image.h  sil_term.h  snippets.h
include/search-index-library/impl/: sil_constants.h  sil_document_image_impl.h  sil_term_impl.h
src/: sil_document_builder.c  sil_document_image.c  sil_search_builder.c  sil_search_image.c  snippets.c
tests/: CMakeLists.txt
tests/src/: get_context.c  test_document_builder.c
